@@ -9,12 +9,12 @@ mysqlclient >= 1.3.12
 pymongo >= 3.7.0
 mmcif >= 0.70
 rcsb.utils.config >= 0.35
-rcsb.utils.io >= 1.12
+rcsb.utils.io >= 1.15
 rcsb.utils.multiproc >= 0.18
-rcsb.utils.chemref >= 0.72
+rcsb.utils.chemref >= 0.77
 scandir; python_version < "3.0"
 configparser; python_version < "3.0"
-rcsb.utils.dictionary >= 0.43
+rcsb.utils.dictionary >= 0.46
 rcsb.utils.repository >= 0.16
 #
 SQLAlchemy; sys_platform == 'linux'
