@@ -308,3 +308,4 @@
   3-Jun-2021  V1.676 Setting long description format to markdown - update pipeline config again
   5-Jun-2021  V1.677 Prune test cases
  10-Jun-2021  V1.679 Update dependencies to rcsb.utils.dictionary
+ 26-Jul-2021  V1.680 Update dependencies to rcsb.utils.dictionary and pipeline configuration
